<resources>
    <string name="app_name">U3T4Event</string>
    <string name="tvPriority">tvPriority</string>
    <string name="rbLow">rbLow</string>
    <string name="rbNormal">rbNormal</string>
    <string name="rbHigh">rbHigh</string>
    <string name="title_activity_event_data">title_activity_event_data</string>
    <string name="btAccept">btAccept</string>
    <string name="btCancel">btCancel</string>
    <string name="tvCurrentDataLabel">tvCurrentDataLabel</string>
    <string name="tvNewEvent">tvNewEvent</string>
    <string name="etEventName">etEventName</string>
    <string name="btEditEventData">btEditEventData</string>
    <string name="tvEventName">tvEventName</string>
    <string name="tvSetDateTime">tvSetDataTime</string>
</resources>