<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".EventDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvEventName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvPriority"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

        <RadioGroup
            android:id="@+id/rgPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/tvPriority"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority">

            <RadioButton
                android:id="@+id/rbLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbLow"/>

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbNormal" />

            <RadioButton
                android:id="@+id/rbHigt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbHigh" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvSetDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvSetDateTime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPriority" />

        <DatePicker
            android:id="@+id/dpDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSetDateTime"
            app:layout_constraintTop_toBottomOf="@+id/tvSetDateTime"/>

        <TimePicker
            android:id="@+id/tpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/dpDate"
            app:layout_constraintTop_toBottomOf="@+id/dpDate"/>

        <Button
            android:id="@+id/btAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btAccept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tpTime"
            app:layout_constraintEnd_toStartOf="@+id/btCancel"/>

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btCancel"
            app:layout_constraintBottom_toBottomOf="@+id/btAccept"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>